# TURF-ENGINE

./: .dockerignore  .gitignore  AGENTS.md  COMPREHENSIVE_AUDIT_REPORT.md  DEPENDENCY_AUDIT_FINAL.md  DEPENDENCY_AUDIT_REPORT.md  LICENSE  README.md  README_AUTOMATION.md  README_SITE.md  cli.py  main__.github__workflows__ci.yml  main__README.md  main__data__nsw_seed.json  main__pyproject.toml  main__src__turf__models.py  main__src__turf__normalise.py  main__src__turf__registry_builder.py  main__tests__test_resolver.py  pyproject.toml  pyproject.toml.recommended  requirements-dev.txt  requirements.txt  test_backtest_report.py  test_build_site.py  test_cli_extensions.py  test_cli_pipeline.py  test_db_tools.py  test_determinism.py  test_pdf_race_preview.py  test_pro_overlay.py  test_runner_insights.py  test_simulation_bankroll.py  test_value_features.py  turf_lite_bundle.xml
cli/: __init__.py  turf_cli.py
data/: demo_meeting.html  demo_odds.html
email/: render_email.py
engine/: __init__.py  turf_engine_pro.py
scripts/: audit_all.sh  guardian_check.sh  odds_watch.py  render_previews.py  repo_inventory.sh  run_turf_daily.sh  verify_repo_identity.sh
site/: build_site.py
tests/: test_betfair_adapter.py  test_cli_daily_digest_command.py  test_daily_digest_import_contract.py  test_plan_060_runner_insights.py  test_plan_070_digest.py  test_plan_071_daily_digest.py  test_plan_072_per_meeting_digests.py  test_plan_073_digest_pages.py  test_plan_074_backfill_digests.py  test_plan_076_collect_pipeline.py
tools/: analyze_backtest.py  backtest.py  db_append.py  (+1 more)
(+59 files in other folders)
