[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turf-registry-resolver"
version = "0.1.0"
description = "Track registry + resolver + scrape plan scaffolding for TURF AU"
authors = [{name = "You", email = "you@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "rapidfuzz>=3.14.3",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "selectolax>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2"
]
scrape = [
    "httpx>=0.28.1",
    "lxml>=5.3.0"
]
pdf = [
    "weasyprint>=62.0"
]

[project.scripts]
turf = "turf.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["turf*", "engine*", "cli*", "tools*"]
